--- a/00_intro/css/main.css
+++ b/00_intro/css/main.css
@@ -35,7 +35,8 @@ body {
  border-top: thin solid #222;
  padding-top: 5px;
  box-sizing: border-box;
- transition: all 0.5s
+ transition: all 0.3s;
+ letter-spacing: -0.5px;
 }
 #gnb li:hover a,
 #gnb li.on a {
@@ -95,16 +96,35 @@ section article dl dt a{font-weight: bold; color: #800;}
 section article dl dt a .small{font-size: 12px;}
 section article dl dt a:hover{color: #e00;}
 section article dl dt img{position: absolute; right:0px; bottom: -45px;}
-section article dl dd{font-size: 13px; position: absolute; left:20px; top:100px; transition: 0.4s; opacity: 0;}
-section article dl:hover dd{top:85px; opacity: 1
-;}
+section article dl dd{font-size: 13px; position: absolute; left:15px; top:100px; transition: 0.3s; opacity: 0;}
+section article dl:hover dd{top:85px; opacity: 1;}
 
 .section1 article dl{height: 75px; margin: 10px;}
 
 .section3{width: 400px;}
-.section3 article dl{width: 220px; height: 45px; margin: 5px;}
+.section3 article dl{width: 200px; height: 40px; margin: 5px;}
 .section3 article dl:hover dd{top:45px;}
 .section3 article dl dd{font-size: 12px;}
+
+.lr_wrap{display: flex;}
+.lr_wrap .left{width: 45%;}
+.lr_wrap .right{width: 55%;}
+
+
+
+.edu{margin-top: 40px;}
+.edu p{text-align: left; display: inline-block; line-height: 40px; border-right: 2px solid #333; padding: 0 150px 0 150px;}
+
+.skill{display: flex; justify-content: center; gap: 0 10px; margin-top: 20px;}
+.skill .box{position: relative; width: 60px; height: 60px; border: 1px solid #ccc; border-radius: 6px; display: flex; justify-content: center; align-items: center;}
+.skill .box img{width: 55px; position: static;}
+.skill.tool .box img{width: 45px;}
+.skill .box span{display: none; position: absolute; border: 1px solid #800; top: 65px; left: 50%; transform: translate(-50%); font-family:'Noto Sans', sans-serif; font-size: 16px; border-radius: 4px; color: #800; padding: 5px;}
+.skill .box:hover span{display: block;}
+
+
+
+
 
 .feedback{position: relative;}
 .slide{position: absolute; width: 720px; left: 50%; margin-left: -210px; height: 100%; top: 100px;}
