--- a/01_portfolio/responsible/03_woori/CSS/reset.css
+++ b/01_portfolio/responsible/03_woori/CSS/reset.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 *{margin:0; padding:0;}
-body{font:14px/normal "Nanum Gothic", "돋움", Dotum, sans-serif; color:#333;}
+body{font:14px/normal "Nanum Gothic", 나눔고딕, "나눔고딕", "돋움", Dotum, sans-serif; color:#333;}
 table, tr, td{font:14px/normal "Nanum Gothic", "돋움", Dotum, sans-serif; color:#333; border-collapse:collapse;}
 input, select, textarea, option{font:14px/normal "Nanum Gothic", "돋움", Dotum, sans-serif; color:#333;}
 h1, h2, h3, h4, h5, h6{font-size:1.0em; font-weight:normal;}
